Change Log
--
version 0.1.8
fixed return handling for text entry boxes
fixed default focus for quesyions, new projects
debugger: breakpoints, namespace
debugger: command line



version 0.1.7pre1

bugs
--
refreshing serverlist when unnecesary fixed                                    

version: 0.1.7pre

Major
--
optional embedded mode, runs with single embedded vim instance
optionally use evim.
short-cut editor
context menus made glob-configurable
context sensitive menus for files and directories
configurable terminal toolbar
plugins informed when configuration registry has been changed
vim shortcuts for controlling PIDA are configurable
File browser new files created in correct direcory.
Fixed absolute path/relative path bug (thanks mw at agami dot at)
Added VCS update support
Added VCS add file support
Add VCS remove file support
Added controls to file browser
Stepping debugger, combined text-graphical interface.
debian packaging utilities gcbirzan @ at wolfheart.ro

Minor
--
user orderable project lists
default shell checks the SHELL environment variable.
confirm with user when changing a current buffer that has been modified
added shortcut for executing project file if one is defined
file browser buffer opening on double-click
terminal button in working directory for file browser
right-click on seperator of plugin bars gives menu of functions

Version: 0.1.6
07/06/05

Major
--

* Project manager updated to includes file browser.
* Subversion support added. gcbirzan at wolfheart.ro

Minor
--
* Python browser uses colours optionally.
* Directories colour in file list configurable.
* Better looks and layout of config widgets
* Config editor sidebar, not tab bar
* Colourful lists
* config help items are Markupable.
* Fixed buffer list icons


Version: 0.1.5
Date: 05/06/05

Major
--
* Determine initial locations of commands using 'which'.
* Foregrounding vim configurable.
* Made terminal background and foreground colours configurable.